--- a/SCA/src/app/chat/chat.component.html
+++ b/SCA/src/app/chat/chat.component.html
@@ -1,18 +1,76 @@
-<form [formGroup]="chatForm">
+<form [formGroup]="chatForm" (ngSubmit)="onSubmit()">
   <h2>Chat</h2>
+
   <div class="form-group">
-    <label for="chat">Person 1</label>
+    <label for="chat"></label>
     <textarea
+      [class.is-invalid]="userChat?.invalid && userChat?.touched"
       formControlName="userChat"
       id="chat"
       cols="30"
       rows="8"
       placeholder="Enter your message here..."
       class="form-control"
+    >
+    <legend>Person 1</legend></textarea
+    >
+    <div *ngIf="userChat?.invalid && userChat?.touched" class="errors-section">
+      <div *ngIf="userChat?.errors?.['required']" class="text-danger">
+        *Chat message is required
+      </div>
+      <div *ngIf="userChat?.errors?.['minlength']" class="text-danger">
+        *Chat message must have at least 2 characters.
+      </div>
+      <div *ngIf="userChat?.errors?.['maxlength']" class="text-danger">
+        *Chat message must be smaller than 20 characters.
+      </div>
+    </div>
+
+    <button
+      [disabled]="!userChat?.valid || !anotherChats?.valid"
+      class="btn"
+      type="submit"
+    >
+      SEND
+    </button>
+  </div>
+
+  <div *ngIf="!userChat?.valid" class="btn-danger">
+    <p>*Complete the form to enable button.</p>
+  </div>
+  <div
+    formArrayName="anotherChats"
+    *ngFor="let chat of anotherChats.controls; let i = index"
+  >
+    <label for="chat-{{ i }}"></label>
+    <textarea
+      id="chat-{{ i }}"
+      cols="30"
+      rows="8"
+      class="form-control"
+      [formControlName]="i"
+      placeholder="Enter your message here..."
+      [class.is-invalid]="chat?.invalid && chat?.touched"
     ></textarea>
+    <div *ngIf="chat?.invalid && chat?.touched" class="errors-section">
+      <div *ngIf="chat?.errors?.['required']" class="text-danger">
+        *Chat message is required
+      </div>
+      <div *ngIf="chat?.errors?.['minlength']" class="text-danger">
+        *Chat message must have at least 2 characters.
+      </div>
+      <div *ngIf="chat?.errors?.['maxlength']" class="text-danger">
+        *Chat message must be smaller than 20 characters.
+      </div>
+    </div>
+
+    <button [disabled]="!chat?.valid || !chat?.valid" class="btn" type="submit">
+      SEND
+    </button>
+    <div *ngIf="!chat?.valid" class="btn-danger">
+      <p>*Complete the form to enable button.</p>
+    </div>
   </div>
-  <div class="btn-sec">
-    <button class="btn">Send</button>
-  </div>
+
   {{ chatForm.value | json }}
 </form>
