--- a/SCA/src/app/navigation/navigation.component.html
+++ b/SCA/src/app/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <nav>
   <h1>Simple Chat Application</h1>
-  <button type="button" class="btn btn-add-person" (click)="addAnoterChat()">
+  <button type="button" class="btn btn-add-person" (click)="addChat()">
     ADD NEW PERSON
   </button>
 </nav>
